--- a/tex/refs.bib
+++ b/tex/refs.bib
@@ -95,3 +95,19 @@
   title = {Biophysical Characterization of Interactions Involving Importin-$\alpha$ during Nuclear Import},
   journal = {Journal of Biological Chemistry}
 }
+
+@article{SeewaldETAL2003,
+  doi = {10.1128/mcb.23.22.8124-8136.2003},
+  url = {https://doi.org/10.1128/mcb.23.22.8124-8136.2003},
+  year = {2003},
+  month = nov,
+  publisher = {American Society for Microbiology},
+  volume = {23},
+  number = {22},
+  pages = {8124--8136},
+  author = {Michael J. Seewald and Astrid Kraemer and Marian Farkasovsky and Carolin Körner and Alfred Wittinghofer and Ingrid R. Vetter},
+  title = {Biochemical Characterization of the Ran--{RanBP1}--{RanGAP} System: Are {RanBP} Proteins and the Acidic Tail of {RanGAP} Required for the Ran-{RanGAP} {GTPase} Reaction?},
+  journal = {Molecular and Cellular Biology}
+}
+
+
