--- a/tex/todomech.tex
+++ b/tex/todomech.tex
@@ -11,7 +11,7 @@
 	\addtocounter{todoindex}{1}%
 	\expandafter\gdef\csname todo\roman{todoindex}\endcsname{#1}%
 	%\expandafter\csname todolabel\roman{todoindex}\endcsname
-	\label{todolabel\roman{todoindex}}
+	\label{todolabel\roman{todoindex}}%
 }
 \renewcommand\TODO[1]{%
 	{%
