--- a/tex/refs.bib
+++ b/tex/refs.bib
@@ -111,3 +111,63 @@
 }
 
 
+@article{LounsburyMacara1997,
+  doi = {10.1074/jbc.272.1.551},
+  url = {https://doi.org/10.1074/jbc.272.1.551},
+  year = {1997},
+  month = jan,
+  publisher = {Elsevier {BV}},
+  volume = {272},
+  number = {1},
+  pages = {551--555},
+  author = {Karen M. Lounsbury and Ian G. Macara},
+  title = {Ran-binding Protein 1 ({RanBP}1) Forms a Ternary Complex with {Ran} and Karyopherin $\beta$ and Reduces {Ran} {GTPase}-activating Protein ({RanGAP}) Inhibition by Karyopherin $\beta$},
+  journal = {Journal of Biological Chemistry}
+}
+
+
+@article{BischoffGoerlich1997,
+  doi = {10.1016/s0014-5793(97)01467-1},
+  url = {https://doi.org/10.1016/s0014-5793(97)01467-1},
+  year = {1997},
+  month = dec,
+  publisher = {Wiley},
+  volume = {419},
+  number = {2-3},
+  pages = {249--254},
+  author = {F.Ralf Bischoff and Dirk G\"{o}rlich},
+  title = {{RanBP1} is crucial for the release of {RanGTP} from importin $\beta$-related nuclear transport factors},
+  journal = {{FEBS} Letters}
+}
+
+
+
+@article{FloerBlobelRexach1997,
+  doi = {10.1074/jbc.272.31.19538},
+  url = {https://doi.org/10.1074/jbc.272.31.19538},
+  year = {1997},
+  month = aug,
+  publisher = {Elsevier {BV}},
+  volume = {272},
+  number = {31},
+  pages = {19538--19546},
+  author = {Monique Floer and G\"{u}nter Blobel and Michael Rexach},
+  title = {Disassembly of {RanGTP}-Karyopherin $\beta$ Complex, an Intermediate in Nuclear Protein Import},
+  journal = {Journal of Biological Chemistry}
+}
+
+
+@article{SaricETAL2007,
+  doi = {10.1016/j.febslet.2007.02.067},
+  url = {https://doi.org/10.1016/j.febslet.2007.02.067},
+  year = {2007},
+  month = mar,
+  publisher = {Wiley},
+  volume = {581},
+  number = {7},
+  pages = {1369--1376},
+  author = {Marc Sari{\'{c}} and Xiaodong Zhao and Carolin K\"{o}rner and Christine Nowak and J\"{u}rgen Kuhlmann and Ingrid R. Vetter},
+  title = {Structural and biochemical characterization of the Importin-$\beta$ $\cdot$ Ran $\cdot$ {GTP} $\cdot$ {RanBD1} complex},
+  journal = {{FEBS} Letters}
+}
+
