--- a/tex/main.tex
+++ b/tex/main.tex
@@ -786,7 +786,7 @@ of \ce{Imp\beta.Ran.GTP} required \ce{{RanBP1}} \emph{and} \ce{{Imp\alpha}}
 %
 Importantly,
 Kaps and RanBP1
-bind Ran
+bind \ce{Ran}
 at distinct sites
 \cite[p.253]{BischoffGoerlich1997}.
 
@@ -829,7 +829,8 @@ Crystal structure: \cite{SaricETAL2007}
 
 
 
-
+Identification of \ce{CAS}:
+\cite{KutayETAL1997}
 
 
 
