--- a/tex/refs.bib
+++ b/tex/refs.bib
@@ -171,3 +171,16 @@
   journal = {{FEBS} Letters}
 }
 
+@article{KutayETAL1997,
+  doi = {10.1016/s0092-8674(00)80372-4},
+  url = {https://doi.org/10.1016/s0092-8674(00)80372-4},
+  year = {1997},
+  month = sep,
+  publisher = {Elsevier {BV}},
+  volume = {90},
+  number = {6},
+  pages = {1061--1071},
+  author = {Ulrike Kutay and F.Ralf Bischoff and Susanne Kostka and Regine Kraft and Dirk G\"{o}rlich},
+  title = {Export of Importin $\alpha$ from the Nucleus Is Mediated by a Specific Nuclear Transport Factor},
+  journal = {Cell}
+}
