--- a/tex/refs.bib
+++ b/tex/refs.bib
@@ -184,3 +184,17 @@
   title = {Export of Importin $\alpha$ from the Nucleus Is Mediated by a Specific Nuclear Transport Factor},
   journal = {Cell}
 }
+
+@article{Hofmeyr2020,
+  doi = {10.1016/j.biosystems.2020.104203},
+  url = {https://doi.org/10.1016/j.biosystems.2020.104203},
+  year = {2020},
+  month = nov,
+  publisher = {Elsevier {BV}},
+  volume = {197},
+  pages = {104203},
+  author = {Jan-Hendrik S. Hofmeyr},
+  title = {Kinetic modelling of compartmentalised reaction networks}
+}
+
+
